feat: get a week of meel
getMeal.ts
- (sort === week) Make an array which is 7 length and fill meal
- (sort === week) If it is weekend, detail is '주말'
- (sort === week) If there isn't meal, detail is 'X'
