# routes/middlewares/meal/get/_validation.ts
@@ -1,5 +1,17 @@
-import { query } from 'express-validator/check';
+import { oneOf, query } from 'express-validator/check';
 
-const getMealValidation = [query('sort').isIn(['week', 'month'])];
+const getMealValidation = oneOf([
+  [
+    query('sort')
+      .isString()
+      .custom(val => val === 'week'),
+  ],
+  [
+    query('sort')
+      .isString()
+      .custom(val => val === 'month'),
+    query('month').isInt({ min: 1, max: 12 }),
+  ],
+]);
 
 export default getMealValidation;
